# stochastic_texture_sampling_demo

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  compile.sh  index.html
.github/workflows/: static.yml
data/shaders/: fragment_default_sampling.glsl  fragment_stochastic_sampling.glsl  vertex.glsl
shaders/: fragment_default_sampling.glsl  vertex.glsl
src/: camera.cpp  camera.hpp  common.hpp  context.cpp  context.hpp  dtime_calculator.hpp  glutil.hpp  image_file.cpp  image_file.hpp  jacobi.h  main.cpp  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  texture_stochastic.cpp  texture_stochastic.hpp
src/emscripten-browser-file/: emscripten_browser_file.h
src/web/: index.html
